<resources>

    <string name="app_name" translatable="false">Tindroom</string>
    <string name="my_profile">My Profile</string>
    <string name="swipe">Swipe</string>
    <string name="chat">Chat</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="any">Any</string>
    <string name="name">Name</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="gender">Gender</string>
    <string name="faculty">Faculty</string>
    <string name="about_you">About you</string>
    <string name="next">Next</string>
    <string name="roommates_gender">Roommate\'s gender</string>
    <string name="have_apartment">I have an apartment: </string>
    <string name="apartment_price">Apartment price (HRK per person)</string>
    <string name="neighborhood">Neighborhood</string>
    <string name="roommate_age_limit">Roommate\'s age limit: %s - %s</string>
    <string name="apartment_price_range">Apartment price range (HRK per person): %s - %s HRK </string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="not_registered_yet">Not registered yet?</string>
    <string name="register_now">Register now!</string>
    <string name="login">Log in</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="change_profile_picture">Change profile picture</string>
    <string name="apartment_description">%s, %s HRK per person.</string>
    <string name="edit_your_personal_info">Edit your personal information</string>
    <string name="edit_your_preferences">Edit your preferences</string>
    <string name="save_changes">Save changes</string>
    <string name="delete_account">Delete account</string>
    <string name="safety">Safety</string>
    <string name="change_password">Change password</string>
    <string name="re_enter_new_password">Re-enter new password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="enter_old_password">Enter old password</string>
    <string name="loading">Loading…</string>
    <string name="settings">Settings</string>
    <string name="no_more_matches">No more matches!</string>
    <string name="upload_profile_picture">New profile picture</string>
    <string name="remove_profile_picture">Remove profile picture</string>
    <string name="start_conversation">Start conversation!</string>

    <!-- Error messages -->
    <string name="edit_profile">Edit profile</string>
    <string name="logout">Log out</string>
    <string name="login_now">Log in!</string>
    <string name="register">Register</string>
    <string name="user_with_this_email_address_already_exists">A user with this email address already exists.</string>
    <string name="please_enter_a_valid_email_address">Please enter a valid email address.</string>
    <string name="password_must_have_at_least_eight_characters">Password must have at least 8 characters.</string>
    <string name="are_you_sure_you_want_to_delete_your_account">Are you sure you want to delete your account?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="rate_this_user">Rate this user</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="no_matches_yet">There are no matches yet</string>

    <!-- Menu items -->
    <string name="menu_item_my_profile" translatable="false">@string/my_profile</string>
    <string name="menu_item_swipe" translatable="false">@string/swipe</string>
    <string name="menu_item_my_chat" translatable="false">@string/chat</string>

    <!-- Login fragment -->
    <string name="passwords_do_not_match">Passwords do not match.</string>
    <string name="incorrect_email_or_password">Incorrect email or password.</string>
    <string name="this_field_is_mandatory">This field is mandatory.</string>
    <string name="unexpected_error_occurred">An unexpected error occurred.</string>
    <string name="login_fragment_email_hint" translatable="false">@string/email</string>

    <!-- Registration fragment -->
    <string name="login_fragment_password_hint" translatable="false">@string/password</string>
    <string name="login_fragment_login_button_label" translatable="false">@string/login</string>
    <string name="login_fragment_not_registered_yet_label" translatable="false">@string/not_registered_yet</string>
    <string name="login_fragment_register_now_label" translatable="false">@string/register_now</string>
    <string name="registration_fragment_username_hint" translatable="false">@string/username</string>
    <string name="registration_fragment_email_hint" translatable="false">@string/email</string>
    <string name="registration_fragment_password_hint" translatable="false">@string/password</string>
    <string name="registration_fragment_repeat_password_hint" translatable="false">@string/repeat_password</string>
    <string name="registration_fragment_password_helper_text" translatable="false">@string/password_must_have_at_least_eight_characters</string>

    <!-- About you fragment -->
    <string name="registration_fragment_next_button_label" translatable="false">@string/next</string>
    <string name="registration_fragment_already_have_an_account_label" translatable="false">@string/already_have_an_account</string>
    <string name="registration_fragment_login_now_label" translatable="false">@string/login_now</string>
    <string name="registration_fragment_register_button_label" translatable="false">@string/register</string>
    <string name="about_you_fragment_male_option" translatable="false">@string/male</string>
    <string name="about_you_fragment_female_option" translatable="false">@string/female</string>
    <string name="about_you_fragment_name_hint" translatable="false">@string/name</string>
    <string name="about_you_fragment_date_of_birth_hint" translatable="false">@string/date_of_birth</string>

    <!-- Roommate form fragment -->
    <string name="about_you_fragment_gender_hint" translatable="false">@string/gender</string>
    <string name="about_you_fragment_faculty_hint" translatable="false">@string/faculty</string>
    <string name="about_you_fragment_about_you_hint" translatable="false">@string/about_you</string>
    <string name="about_you_fragment_next_button_label" translatable="false">@string/next</string>
    <string name="roommate_form_fragment_roommate_gender_hint" translatable="false">@string/roommates_gender</string>
    <string name="roommate_form_fragment_have_apartment_label" translatable="false">@string/have_apartment</string>
    <string name="roommate_form_fragment_price_hint" translatable="false">@string/apartment_price</string>
    <string name="roommate_form_fragment_neighborhood_hint" translatable="false">@string/neighborhood</string>
    <string name="roommate_form_fragment_roommate_age_title" translatable="false">@string/roommate_age_limit</string>
    <string name="roommate_form_fragment_price_range_title" translatable="false">@string/apartment_price_range</string>
    <string name="roommate_form_fragment_next_button_label" translatable="false">@string/next</string>

    <!-- My profile fragment -->
    <string name="my_profile_fragment_edit_profile_label" translatable="false">@string/edit_profile</string>
    <string name="my_profile_fragment_logout_label" translatable="false">@string/logout</string>
    <string name="my_profile_fragment_change_profile_picture_label" translatable="false">@string/change_profile_picture</string>
    <string name="my_profile_fragment_safety_label" translatable="false">@string/safety</string>

    <!-- Change password fragment -->
    <string name="change_password_fragment_change_password_button_label" translatable="false">@string/change_password</string>
    <string name="change_password_fragment_enter_old_password_hint" translatable="false">@string/enter_old_password</string>
    <string name="change_password_fragment_enter_new_password_hint" translatable="false">@string/enter_new_password</string>
    <string name="change_password_fragment_re_enter_new_password_hint" translatable="false">@string/re_enter_new_password</string>
    <string name="change_password_fragment_password_helper_text" translatable="false">@string/password_must_have_at_least_eight_characters</string>

    <!-- Settings fragment -->
    <string name="settings_fragment_edit_your_personal_info_label" translatable="false">@string/edit_your_personal_info</string>
    <string name="settings_fragment_name_hint" translatable="false">@string/name</string>
    <string name="settings_fragment_date_of_birth_hint" translatable="false">@string/date_of_birth</string>
    <string name="settings_fragment_faculty_hint" translatable="false">@string/faculty</string>
    <string name="settings_fragment_about_you_hint" translatable="false">@string/about_you</string>
    <string name="settings_fragment_edit_your_preferences_label" translatable="false">@string/edit_your_preferences</string>
    <string name="settings_fragment_roommate_gender_hint" translatable="false">@string/roommates_gender</string>
    <string name="settings_fragment_roommate_age_title" translatable="false">@string/roommate_age_limit</string>
    <string name="settings_fragment_have_apartment_label" translatable="false">@string/have_apartment</string>
    <string name="settings_fragment_price_hint" translatable="false">@string/apartment_price</string>
    <string name="settings_fragment_neighborhood_hint" translatable="false">@string/neighborhood</string>
    <string name="settings_fragment_price_range_title" translatable="false">@string/apartment_price_range</string>
    <string name="settings_fragment_save_changes_button_label" translatable="false">@string/save_changes</string>
    <string name="settings_fragment_delete_account_label" translatable="false">@string/delete_account</string>
    <string name="settings_fragment_gender_hint" translatable="false">@string/gender</string>
    <!-- Swipe fragment -->
    <string name="swipe_fragment_apartment_description" translatable="false">@string/apartment_description</string>
    <string name="swipe_fragment_edit_your_preferences_label" translatable="false">@string/edit_your_preferences</string>
    <string name="swipe_fragment_settings_button_label" translatable="false">@string/settings</string>
    <string name="swipe_fragment_no_more_matches_label" translatable="false">@string/no_more_matches</string>

    <!-- Change profile picture bottom sheet layout -->
    <string name="bottom_sheet_upload_profile_picture_label" translatable="false">@string/upload_profile_picture</string>
    <string name="bottom_sheet_remove_profile_picture_label" translatable="false">@string/remove_profile_picture</string>

    <!--Notification-->
    <string name="reply_label" translatable="false">Reply</string>

    <!-- Chat fragment -->
    <string name="chat_fragment_start_conversation_label" translatable="false">@string/start_conversation</string>
    <string name="review_popup_dialog_title" translatable="false">@string/rate_this_user</string>
    <string name="review_popup_dialog_ok_label" translatable="false">@string/ok</string>
    <string name="review_popup_dialog_cancel_label" translatable="false">@string/cancel</string>
    <string name="chat_fragment_no_matches_yet_label" translatable="false">@string/no_matches_yet</string>

    <!-- Arrays -->
    <array name="your_gender_items">
        <item>@string/male</item>
        <item>@string/female</item>
    </array>
    <array name="roommates_gender_items">
        <item>@string/male</item>
        <item>@string/female</item>
        <item>@string/any</item>
    </array>

</resources>