<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.prelogin.RoommateFormFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp" >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/roommateGenderInput"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/linear_layout_margin"
            android:hint="@string/roommate_form_fragment_roommate_gender_hint">

            <AutoCompleteTextView
                android:id="@+id/roommateGenderDropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/linear_layout_margin"
            android:layout_marginStart="@dimen/title_start_margin"
            android:layout_marginEnd="@dimen/linear_layout_margin"
            style="@style/TitleTextViewStyle"
            android:text="@string/roommate_form_fragment_roommate_age_title" />

        <com.google.android.material.slider.RangeSlider
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/linear_layout_margin"
            android:valueFrom="18"
            android:valueTo="35"
            android:stepSize="1"
            app:values="@array/initial_age_range_values" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/linear_layout_margin"
            android:checked="true"
            style="@style/TitleTextViewStyle"
            android:text="@string/roommate_form_fragment_have_apartment_label"/>

        <LinearLayout
            android:id="@+id/have_apartment_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/priceInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/linear_layout_margin"
                android:hint="@string/roommate_form_fragment_price_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/priceEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/neighbourhoodInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/linear_layout_margin"
                android:hint="@string/roommate_form_fragment_neighborhood_hint">

                <AutoCompleteTextView
                    android:id="@+id/facultyDropdown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/need_apartment_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/linear_layout_margin"
                android:layout_marginStart="@dimen/title_start_margin"
                android:layout_marginEnd="@dimen/linear_layout_margin"
                style="@style/TitleTextViewStyle"
                android:text="@string/roommate_form_fragment_price_range_title" />

            <com.google.android.material.slider.Slider
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_margin="@dimen/linear_layout_margin"
                android:valueFrom="500"
                android:valueTo="5000"
                android:value="2500"/>

        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/linear_layout_margin"
            android:text="@string/roommate_form_fragment_next_button_label" />

    </LinearLayout>

</ScrollView>